Update the language for a step

--- a/src/content/studio/contracts.mdx
+++ b/src/content/studio/contracts.mdx
@@ -383,7 +383,7 @@ To set blocking downstream variants:
       src="./img/contract-blocking-variants.jpg"
     />
 
-3. Select each contract variant that you want to enable contract checks for.
+3. Select each contract variant that should be a blocking downstream variant.
 
 You're done! From now on, whenever schema checks run for your source variant, those checks _will_ fail if contract checks fail for _any_ blocking downstream variant.
 
