edited federation note

--- a/src/content/studio/schema/schema-reporting.mdx
+++ b/src/content/studio/schema/schema-reporting.mdx
@@ -6,7 +6,7 @@ import ObtainGraphApiKey from '../../shared/obtain-graph-api-key';
 
 **Schema reporting** enables your GraphQL server to register its latest schema with Apollo every time it starts up. To use this feature, your server needs to support the [schema reporting protocol](./schema-reporting-protocol/). This protocol is supported by [Apollo Server](#apollo-server-setup), and [other GraphQL servers](#other-graphql-servers) can implement support.
 
-> **Schema reporting does not currently support graphs that use Apollo Federation.** If you have a federated graph, instead see [Setting up managed federation](https://www.apollographql.com/docs/federation/managed-federation/setup/).
+> **Schema reporting does not support graphs that use Apollo Federation.** If you have a federated graph, instead see [Setting up managed federation](https://www.apollographql.com/docs/federation/managed-federation/setup/).
 
 > **⚠️ Important:** With schema reporting, your sever publishes schema updates at runtime. This can lead to non-deterministic results. We recommend instead using the [Rover CLI](/rover/) in a CI/CD pipeline for isolated and reproducible schema checks and publishes.
 >
