Update graph settings page image

--- a/src/content/studio/metrics/datadog-integration.mdx
+++ b/src/content/studio/metrics/datadog-integration.mdx
@@ -45,7 +45,7 @@ To integrate with Datadog, you provide your Datadog API key and region to Studio
    - If the domain name is `app.datadoghq.com`, then your API region is `US`.
    - If the domain name is `app.datadoghq.eu`, then your API region is `EU`.
 
-4. In Studio, go to your graph's Integrations page:
+4. In Studio, go to your graph's Settings page and click on the Reporting tab:
 
    <img
      src="../img/datadog/settings-link.png"
