--- a/src/content/basics/resources/product-launch-stages.mdx
+++ b/src/content/basics/resources/product-launch-stages.mdx
@@ -1,36 +1,37 @@
 ---
-title: Launch stages for Apollo products and features
+title: Apollo launch stages
+description: For products, features, and open-source releases
 ---
 
-## Primary launch stages
+## Launch stages
 
-All new Apollo products, features, and open-source libraries use two primary launch stages: **preview** and **general availability**.
+All launches of Apollo products, features, and open-source releases use two launch stages: **preview** and **general availability**.
 
 ### Preview
 
-Product and feature **previews** are usually announced publicly and represent a near-complete version of the release. However, previews are _not_ officially supported with any SLA, and breaking API changes are possible between versions.
+Product and feature **previews** are usually announced publicly and represent a near-complete version of a feature set. However, previews are _not_ officially supported with any SLA, and breaking API changes are possible between incremental versions of a preview.
 
-**A preview might still contain bugs or undergo iteration.** You're encouraged to try out preview releases in test environments to familiarize yourself with upcoming functionality before it reaches [general availability](#general-availability).
+**A preview might still contain bugs or undergo iteration.** You're encouraged to try previews in test environments to familiarize yourself with upcoming functionality before it reaches [general availability](#general-availability).
 
 ### General availability
 
 A **generally available** product or feature has been deemed ready for use in a production environment and is officially supported by Apollo. Its documentation is considered sufficient to support widespread adoption.
 
-## Pre-release stages
+## Open-source pre-releases
 
-A particular product or feature might include one or more additional pre-release stages in its development lifecycle:
+Apollo open-source projects might provide pre-releases for early access:
 
 ### Alpha / Beta
 
-An **alpha** or **beta** release is in volatile, active development. The release might not be feature-complete, and breaking API changes are possible between individual versions. 
+An **alpha** or **beta** is in volatile, active development. The version might not be feature-complete, and breaking API changes are possible between incremental versions of the alpha or beta. 
 
 These stages help Apollo gather feedback and issues from community members and customers who are enthusiastic early adopters.
 
 ### Release candidate (RC)
 
-A **release candidate** (RC) release is considered potentially viable for general availability. Minor bugs might still be present, and documentation for the release might be incomplete.
+A **release candidate** (RC) version is considered potentially viable for general availability. Minor bugs might still be present, and documentation for the release might be incomplete.
 
-You're encouraged to test out RC releases to help Apollo identify any remaining issues.
+You're encouraged to test out RC versions to help Apollo identify any remaining issues.
 
 ## Experimental features
 
@@ -38,19 +39,18 @@ At Apollo, we believe in developing and iterating in the open. **Experimental fe
 
 Experimental features are in active development. They can be present in a product that's in _any_ of the stages defined above, and should be used cautiously. **Experimental features might be removed from a product at any time without notice.**
 
-
 ## Stages for discontinuing support
 
-When support for a [generally available](#general-availability) Apollo product or feature is ending, that release proceeds through two additional stages: **deprecated** and **end of life**.
+When support is ending for a [generally available](#general-availability) Apollo product, feature, or open-source release, it first becomes [deprecated](#deprecated), then eventually [end-of-life](#end-of-life).
 
 ### Deprecated
 
-A **deprecated** release is still supported by Apollo. It continues to receive security patches and updates to address major regressions. After a specified date, deprecated releases move to [end-of-life](#end-of-life), at which point the release is no longer supported.
+A **deprecated** product, feature, or open-source release is still supported by Apollo. It continues to receive security patches and updates to address major regressions. An [end-of-life](#end-of-life) date is provided alongside the deprecation, after which support ends.
 
 **Avoid relying on deprecated releases whenever possible.** Consider upgrading to the latest generally available release to continue receiving new features and functionality.
 
 ### End-of-life
 
-An **end-of-life** release is **no longer supported or maintained by Apollo**. These releases no longer receive security patches or remediation for regressions. There is no commitment from Apollo to release further versions and no guarantee that the most recent version will continue to work.
+Products, features, and open-source releases that reach **end-of-life** are **no longer supported or maintained by Apollo**. They no longer receive updates, security patches, or remediation for regressions. There is no commitment from Apollo to release further versions and no guarantee that the most recent version will continue to work. End-of-life products and features are no longer generally available.
 
-**Do not run end-of-life releases in production.** Upgrade to the latest generally available release as soon as possible to ensure you continue receiving security patches, bug fixes, and new features. 
+**Do not run end-of-life open-source releases in production.** Upgrade to the latest generally available release as soon as possible to ensure you continue receiving security patches, bug fixes, and new features. 
