Incorporate remaining feedback

--- a/src/content/basics/resources/product-launch-stages.mdx
+++ b/src/content/basics/resources/product-launch-stages.mdx
@@ -3,13 +3,13 @@ title: Apollo launch stages
 description: For products, features, and open-source releases
 ---
 
-## Launch stages
+## Product launch stages
 
 All launches of Apollo products, features, and open-source releases use two launch stages: **preview** and **general availability**.
 
 ### Preview
 
-Product and feature **previews** are usually announced publicly and represent a near-complete version of a feature set. However, previews are _not_ officially supported with any SLA, and breaking API changes are possible between incremental versions of a preview.
+Product and feature **previews** are usually announced publicly and represent a near-complete version of associated functionality. However, previews are _not_ officially supported with any SLA, and breaking API changes are possible between incremental versions of a preview.
 
 **A preview might still contain bugs or undergo iteration.** You're encouraged to try previews in test environments to familiarize yourself with upcoming functionality before it reaches [general availability](#general-availability).
 
@@ -25,19 +25,17 @@ Apollo open-source projects might provide pre-releases for early access:
 
 An **alpha** or **beta** is in volatile, active development. The version might not be feature-complete, and breaking API changes are possible between incremental versions of the alpha or beta. 
 
-These stages help Apollo gather feedback and issues from community members and customers who are enthusiastic early adopters.
+Alphas and betas help Apollo gather feedback and issues from community members and customers who are enthusiastic early adopters.
 
 ### Release candidate (RC)
 
-A **release candidate** (RC) version is considered potentially viable for general availability. Minor bugs might still be present, and documentation for the release might be incomplete.
+A **release candidate** (RC) is considered potentially viable for general availability. Minor bugs might still be present, and documentation for the release might be incomplete.
 
 You're encouraged to test out RC versions to help Apollo identify any remaining issues.
 
 ## Experimental features
 
-At Apollo, we believe in developing and iterating in the open. **Experimental features** are targeted at developers who want to adopt advanced, cutting-edge functionality. These features might not be complete, and breaking API changes are possible between individual versions.
-
-Experimental features are in active development. They can be present in a product that's in _any_ of the stages defined above, and should be used cautiously. **Experimental features might be removed from a product at any time without notice.**
+At Apollo, we believe in developing and iterating in the open. **Experimental features** are targeted at developers who want to adopt advanced, cutting-edge functionality. Experimental features might not be complete, they might have breaking changes at any time, and they might be removed from a product or an incremental version of an open-source release without notice.
 
 ## Stages for discontinuing support
 
