Fix various broken links in core docs

--- a/src/content/studio/contracts.mdx
+++ b/src/content/studio/contracts.mdx
@@ -5,7 +5,7 @@ description: Deliver subsets of your enterprise supergraph
 
 > Contracts are available only for [Enterprise plans](https://www.apollographql.com/pricing/). Currently, they only support [federated variants](/federation/) of Studio graphs.
 
-Apollo Studio **contracts** enable you to deliver different subsets of your supergraph to different consumers. Each contract filters specific portions of your supergraph's [API schema](https://www.apollographql.com/docs/federation/#federated-schemas) into a different Studio variant:
+Apollo Studio **contracts** enable you to deliver different subsets of your supergraph to different consumers. Each contract filters specific portions of your supergraph's [API schema](/federation/federated-types/overview/#federated-schemas) into a different Studio variant:
 
 ```mermaid
 graph LR;
