--- a/src/content/studio/schema/schema-reporting.mdx
+++ b/src/content/studio/schema/schema-reporting.mdx
@@ -8,7 +8,7 @@ import ObtainGraphApiKey from '../../shared/obtain-graph-api-key';
 
 > **Schema reporting does not support graphs that use Apollo Federation.** If you have a federated graph, instead see [Setting up managed federation](https://www.apollographql.com/docs/federation/managed-federation/setup/).
 
-> **⚠️ Important:** With schema reporting, your sever publishes schema updates at runtime. This can lead to non-deterministic results. We recommend instead using the [Rover CLI](/rover/) in a CI/CD pipeline for isolated and reproducible schema checks and publishes.
+> **⚠️ Important:** With schema reporting, your server publishes schema updates at runtime. This can lead to non-deterministic results. We recommend instead using the [Rover CLI](/rover/) in a CI/CD pipeline for isolated and reproducible schema checks and publishes.
 >
 > For more information on staging and releasing schema updates, see [Change management in Apollo Federation](/enterprise-guide/change-management/)
 
