Update plan info

--- a/src/content/shared/callout-card.mdx
+++ b/src/content/shared/callout-card.mdx
@@ -20,7 +20,7 @@ Apollo Studio provides core GraphQL schema management features to all users for 
   rel="noopener noreferrer"
   href="https://studio.apollographql.com/signup?utm_source=apollo-docs"
 >
-  Start a free trial
+  Sign up
 </Button>
 
 </Stack>
