--- a/src/content/studio/getting-started.mdx
+++ b/src/content/studio/getting-started.mdx
@@ -22,7 +22,7 @@ You can sign up for Studio with either your GitHub identity or a username and pa
 
    - Creating an [organization](./org/organizations/) that you can invite teammates to
 
-   - [Selecting a plan](https://www.apollographql.com/pricing/) for your organization (the Free plan is always free, and the Team plan provides a free trial of paid features)
+   - [Selecting a plan](https://www.apollographql.com/pricing/) for your organization (the Free plan is great for getting started)
 
 ## 2. Create your first graph
 
