--- a/src/content/studio/org/organizations.mdx
+++ b/src/content/studio/org/organizations.mdx
@@ -20,8 +20,9 @@ You can create additional organizations by clicking the `+` button at the top of
 ## Deleting an organization
 
 You can delete an organization at any time. This is a permanent action that cannot be undone, and will remove all traces of your organization from Studio's system.
-Deleting your organization will:
 
-- Remove all user memberships from your organizations.
-- Permanently delete all graphs from your organization, and their associated data. These graph IDs cannot be reused later.
-- Immediately terminate the Team subscription or Team Trial on your account, if you have one. We can't issue refunds for this, unfortunately.
+Deleting your organization does all of the following:
+
+- Removes all user memberships from your organization
+- Permanently deletes all graphs from your organization, along with their associated data. These graph IDs can't be reused later.
+- Immediately terminates any paid subscription on your organization, if you have one. We can't issue refunds for this, unfortunately.
