graph to supergraph on menu headers

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -29,7 +29,7 @@ Execute GraphQL operations, cache their results, and manage your application's s
   <Docset icon={DOCSET_ICONS.android} title="Kotlin" path="/kotlin" />
 </DocsetGrid>
 
-## Backend
+## Build your supergraph
 
 <DocsetGrid>
   <Docset
@@ -53,7 +53,7 @@ Execute GraphQL operations, cache their results, and manage your application's s
   />
 </DocsetGrid>
 
-## Cloud
+## Manage your supergraph
 
 <DocsetGrid>
   <Docset
