--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -19,41 +19,7 @@ Apollo is a platform for building a [**supergraph**](./intro/platform/), a unifi
 
 <Odyssey />
 
-## Apollo Client
-
-Execute GraphQL operations, cache their results, and manage your application's state with one powerful library.
-
-<DocsetGrid>
-  <Docset icon={DOCSET_ICONS.react} title="React" path="/react" />
-  <Docset icon={DOCSET_ICONS.ios} title="iOS" path="/ios" />
-  <Docset icon={DOCSET_ICONS.android} title="Kotlin" path="/kotlin" />
-</DocsetGrid>
-
 ## Build your supergraph
-
-<DocsetGrid>
-  <Docset
-    icon={DOCSET_ICONS.server}
-    title="Apollo Server"
-    description="Configure a production-ready GraphQL server to fetch and combine data from multiple sources."
-    path="/apollo-server"
-  />
-  <Docset
-    icon={DOCSET_ICONS.federation}
-    title="Federation"
-    description="Implement a single unified supergraph across multiple subgraphs."
-    path="/federation"
-    cta={CTA_LEARN}
-  />
-  <Docset
-    icon={DOCSET_ICONS.router}
-    title="Router"
-    description="A configurable, high-performance graph router for a federated supergraph."
-    path="/router"
-  />
-</DocsetGrid>
-
-## Manage your supergraph
 
 <DocsetGrid>
   <Docset
@@ -64,11 +30,45 @@ Execute GraphQL operations, cache their results, and manage your application's s
     cta={CTA_LEARN}
   />
   <Docset
+    icon={DOCSET_ICONS.federation}
+    title="Apollo Federation"
+    description="Implement a single, unified supergraph that combines multiple GraphQL APIs."
+    path="/federation"
+    cta={CTA_LEARN}
+  />
+</DocsetGrid>
+
+## Technical reference
+
+<DocsetGrid>
+  <Docset
+    icon={DOCSET_ICONS.server}
+    title="Apollo Server"
+    description="Configure a production-ready GraphQL server to fetch and combine data from multiple sources."
+    path="/apollo-server"
+  />
+  <Docset
+    icon={DOCSET_ICONS.router}
+    title="Apollo Router"
+    description="A configurable, high-performance graph router for a federated supergraph."
+    path="/router"
+  />
+  <Docset
     icon={DOCSET_ICONS.rover}
     title="Rover CLI"
     description="Manage your Studio graphs and schemas from the command line."
     path="/rover"
   />
+</DocsetGrid>
+
+### Apollo Client
+
+Execute GraphQL operations, cache their results, and manage your application's state with one powerful library.
+
+<DocsetGrid>
+  <Docset icon={DOCSET_ICONS.react} title="React" path="/react" />
+  <Docset icon={DOCSET_ICONS.ios} title="iOS" path="/ios" />
+  <Docset icon={DOCSET_ICONS.android} title="Kotlin" path="/kotlin" />
 </DocsetGrid>
 
 <VStack pt="4" spacing="4" textAlign="center" maxW="md" mx="auto">
