--- a/src/content/studio/explorer/explorer.mdx
+++ b/src/content/studio/explorer/explorer.mdx
@@ -11,17 +11,19 @@ The Explorer is free for all Apollo Studio organizations. It supports all GraphQ
 
 ## Setup
 
-To get started with the Explorer, [create a graph](../getting-started/#2-create-your-first-graph) in Apollo Studio and then navigate to the graph's Explorer tab.
+To get started with the Explorer, [create a graph](../getting-started/#2-create-your-first-supergraph) in Apollo Studio and then navigate to that graph's Explorer page:
+
+<img
+  src="../img/explorer-new-graph.jpg"
+  class="screenshot"
+  alt="The default Explorer view for a new supergraph"
+/>
 
 > The Explorer also provides a [sandbox mode](./sandbox/) that doesn't require an Apollo account.
 
-The Getting Started tab _within_ the Explorer helps you get up and running with core features.
-
-When you execute your first query, the Explorer prompts you for the URL of your running GraphQL server. You can then change this URL at any time from the Explorer's Settings tab.
-
 ## Building a query
 
-Here's an example [embedded Explorer](./embed-explorer/) you use to try out the query-building features described below:
+Here's an example [embedded Explorer](./embed-explorer/) you can use to try out the query-building features described below!
 
 <EmbeddableExplorer />
 
@@ -73,7 +75,8 @@ After you select which path you want, the Explorer opens that path in its Docume
 
 The Explorer also provides:
 
-- A [sandbox mode](./sandbox/) that doesn't require an Apollo account
+- [Sandbox support](./sandbox/) that doesn't require an Apollo account
 - Multiple methods for [authenticating](./connecting-authenticating/) with your GraphQL server
+- [Operation collections](./operation-collections/) for sharing common operations with other team members
 - The ability to [embed the Explorer](./embed-explorer/) on your own website
 - [Display options, federation support, and more](./additional-features/)
