--- a/src/content/studio/explorer/operation-collections.mdx
+++ b/src/content/studio/explorer/operation-collections.mdx
@@ -7,7 +7,7 @@ You can create **operation collections** in the Apollo Studio Explorer, enabling
 
 <img src="../img/operation-collections/list-collections.jpg" alt="Explorer collections list" class="screenshot" width="300" />
 
-Each [variant](../org/graphs/#managing-variants) of a graph has its own set of operation collections. An operation collection can be either **personal** (visible only to you) or **shared** (visible to all organization members who can view the corresponding variant).
+Each [variant](../org/graphs/#variants) of a graph has its own set of operation collections. An operation collection can be either **personal** (visible only to you) or **shared** (visible to all organization members who can view the corresponding variant).
 
 **Operation collections help you and your team:**
 
@@ -99,7 +99,7 @@ Each graph variant in Studio has a [README page](../org/graphs/#the-readme-page)
 
 ### Public collections
 
-If you create a [public variant](../org/graphs/#public-variants) of your graph, any shared collections for that variant are visible to _everyone_, not just members of your organization. Anonymous users can view and execute operations in a public collection, but they can't make any changes to the collection.
+If you create a [public variant](../graph-access-permissions/#public-variants) of your graph, any shared collections for that variant are visible to _everyone_, not just members of your organization. Anonymous users can view and execute operations in a public collection, but they can't make any changes to the collection.
 
 ## Sandbox collections
 
